src/objects/PhysicalAssetHistory__c.object
<CustomObject>
    <description>This object is used to host all information regarding changes history of a physical asset.</description>
    <fields>
        <fullName>APTS_FinanceId__c</fullName>
        <description>Field to populate with the same finance id from related physical asset</description>
        <label>Finance Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the account location where the asset is located at.</description>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Physical Asset History</relationshipLabel>
        <relationshipName>Physical_Asset_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActiveContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveWarranty__c</fullName>
        <formula>WarrantyStartDate__c + 

CASE(Warranty__c, &quot;0&quot;, 0, &quot;3&quot;, 91,&quot;6&quot;,183,&quot;12&quot;,365,&quot;18&quot;,548,&quot;24&quot;,730,0)



&gt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgreementRecordType__c</fullName>
        <label>Agreement Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Deal</fullName>
                </value>
                <value>
                    <fullName>Consumption Model</fullName>
                </value>
                <value>
                    <fullName>Registration Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetStatus__c</fullName>
        <label>Asset Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Activation</fullName>
                    <default>true</default>
                    <label>Pending Activation</label>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallOutChargeCoverage__c</fullName>
        <label>Call Out Charge Coverage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfigurationFileURL__c</fullName>
        <label>Configuration File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConfigurationManualAgreementsURL__c</fullName>
        <label>Configuration Manual &amp; Agreements URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Connected__c</fullName>
        <label>Connected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounterReading__c</fullName>
        <label>Counter Reading</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerReferenceNumber__c</fullName>
        <label>Customer Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeInstallationDate__c</fullName>
        <label>De-Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullOperatingCoverage__c</fullName>
        <description>The percentage coverage for operating jobs executed for this particular asset.</description>
        <label>Full Operating Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <label>House Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludesPreventiveMaintenanceCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Preventive Maintenance Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludesWTSCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes WTS Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitialActivationDate__c</fullName>
        <label>Initial Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstallationDate__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JDECrockeryVolumeSize__c</fullName>
        <description>This indicates the volume size of JDE Crockery.</description>
        <label>JDE Crockery Volume Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabourChargeCoverage__c</fullName>
        <label>Labour Charge Coverage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LastContactDate__c</fullName>
        <description>This indicates the last time the customer was contact about this machine. Reasons can differ from a counter reading, a customer care call, a sales call to machine park verification.</description>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPreventiveMaintenanceDate__c</fullName>
        <label>Last Preventive Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastVisitedEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Visited Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Physical Asset History (Resource)</relationshipLabel>
        <relationshipName>Physical_Asset_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastWTSDate__c</fullName>
        <label>Last WTS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MachineAge__c</fullName>
        <label>Machine Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MachineLastServiceDate__c</fullName>
        <description>This indicates the last time service was provided on the machine.</description>
        <label>Machine Last Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Machine_Care__c</fullName>
        <description>Global Picklist used on other objects as well ( Operating Tasks)</description>
        <label>Machine Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_MachineCare</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MothballAssetIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that the machine is temporary out of service.</description>
        <label>Mothball Asset Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MothballExpirationDate__c</fullName>
        <description>This indicates the end of the Mothball indication.</description>
        <label>Mothball Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextPreventiveMaintenanceDate__c</fullName>
        <label>Next Preventive Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextWTSDate__c</fullName>
        <label>Next WTS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OwnedByCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owned By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PONumberMachines__c</fullName>
        <description>This indicates the PO number for machine orders.</description>
        <label>PO Number (Machines)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumberRequiredMachines__c</fullName>
        <description>This indicates whether a PO Number is required for machine orders.</description>
        <label>PO Number Required (Machines)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PONumberRequiredServices__c</fullName>
        <label>PO Number Required (Services)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PONumberServices__c</fullName>
        <description>This indicates the PO number for machine services.</description>
        <label>PO Number (Services)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumberTypeMachines__c</fullName>
        <description>This indicates whether a PO Number for machine orders is fixed or variable.</description>
        <label>PO Number Type (Machines)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PONumberTypeServices__c</fullName>
        <description>This indicates whether a PO Number for machine servies is fixed or variable.</description>
        <label>PO Number Type (Services)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhysicalAsset__c</fullName>
        <description>This is a link to the parent physical asset used when entering an option.</description>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Physical Asset History</relationshipLabel>
        <relationshipName>Physical_Asset_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreventiveMaintenanceCoverage__c</fullName>
        <label>Preventive Maintenance Coverage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PreventiveMaintenanceInterval__c</fullName>
        <label>Preventive Maintenance Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreventiveMaintenanceManualUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KTS-392]: Contract Triggered Cases (Preventive Maintenance) - Field used to indicate that a manual change has been made for the preventive maintenance date</description>
        <label>Preventive Maintenance Manual Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreventiveMaintenancePlanned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KTS-392]: Contract Triggered Cases (Preventive Maintenance) - Field used to indicate that a preventive maintenance job has already been created</description>
        <label>Preventive Maintenance Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the product used for the asset.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Physical Asset History</relationshipLabel>
        <relationshipName>Physical_Asset_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefurbishedMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refurbished Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemainingUsefulLife__c</fullName>
        <label>Remaining Useful Life</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replaced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that the machine is replaced with another asset.</description>
        <label>Replaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResponseTimeS15__c</fullName>
        <label>Response Time S15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResponseTime__c</fullName>
        <label>Response Time S10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>144</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>91</fullName>
                    <label>EOD1</label>
                </value>
                <value>
                    <fullName>92</fullName>
                    <label>EOD2</label>
                </value>
                <value>
                    <fullName>93</fullName>
                    <label>EOD3</label>
                </value>
                <value>
                    <fullName>94</fullName>
                    <label>EOD4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routesales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that ingredients are delivered based by route sales employees.</description>
        <label>Routesales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <description>This indicates the sales organization / region to which the machine is sold to.</description>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceWindow__c</fullName>
        <label>Service Window</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Service_Window</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingCountryISO__c</fullName>
        <label>Shipping Country ISO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmokingArea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Sold To related to the asset.</description>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Physical Asset History</relationshipLabel>
        <relationshipName>Physical_Asset_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SparePartCoverage__c</fullName>
        <label>Spare Part Coverage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalServiceCoverage__c</fullName>
        <label>Technical Service Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Basic Coverage</fullName>
                </value>
                <value>
                    <fullName>Full Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TemporaryLocationExpiration__c</fullName>
        <description>This indicates the end date for which the machine will be placed temporary</description>
        <label>Temporary Location Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TemporaryLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates a temporary location of the machine.</description>
        <label>Temporary Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Physical Asset History (Temporary Location)</relationshipLabel>
        <relationshipName>Physical_Asset_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TypeOfContract__c</fullName>
        <label>Type Of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consumption Model</fullName>
                </value>
                <value>
                    <fullName>Free On Loan</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>RentBuy</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueNumber__c</fullName>
        <externalId>true</externalId>
        <label>Unique Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <description>This indicates the date from which the history record was created.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ValidTo__c</fullName>
        <description>This indicates the date for which another history record was created.</description>
        <label>Valid To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WTSChangedBy__c</fullName>
        <label>WTS Changed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WTSInterval__c</fullName>
        <label>WTS Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WTSManualUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KTS-1095]: Contract Triggered Cases (Waterfilter Changes) - Field used to indicate that a manual change has been made for the water filter date</description>
        <label>WTS Manual Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WTSPlanned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KTS-1095]: Contract Triggered Cases (Waterfilter Changes) - Field used to indicate that a water filter job has already been created</description>
        <label>WTS Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WarrantyEndDate__c</fullName>
        <formula>ADDMONTHS(WarrantyStartDate__c , VALUE(TEXT(Warranty__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WarrantyStartDate__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <description>The warranty in months applicable to the machine.</description>
        <inlineHelpText>In months.</inlineHelpText>
        <label>Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WaterfilterCoverage__c</fullName>
        <label>Waterfilter Coverage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Physical Asset History</label>
    <nameField>
        <displayFormat>PAH-{0000}</displayFormat>
        <label>Physical Asset History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physical Asset History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>